Fix kubeconfig context and sanity check

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    # Make kubeconfig path explicit and shared by all steps
     env:
       KUBECONFIG: ${{ github.workspace }}/kubeconfig
 
@@ -23,14 +22,17 @@ jobs:
 
     - name: Write kubeconfig from secret
       run: |
-        # Write the secret content into the kubeconfig file
         printf '%s\n' "${{ secrets.K3S_KUBECONFIG }}" > "$KUBECONFIG"
 
     - name: Sanity check kubeconfig
       run: |
         echo "KUBECONFIG path: $KUBECONFIG"
-        kubectl config get-clusters
-        kubectl config view --minify
+        echo "---- contexts ----"
+        kubectl config get-contexts
+        echo "---- set context ----"
+        kubectl config use-context default
+        echo "---- cluster info ----"
+        kubectl cluster-info
 
     - name: Deploy manifests
       run: |
